fix(styles): update secondary-foreground color for improved contrast

--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -14,7 +14,7 @@
 	--primary: oklch(0.6346 0.2509 28.4341);
 	--primary-foreground: oklch(1 0 0);
 	--secondary: oklch(0.889 0.1802 95.5155);
-	--secondary-foreground: oklch(72.193% 0.00008 271.152);
+	--secondary-foreground: oklch(18.459% 0.00327 17.102);
 	--muted: oklch(0.9237 0.0042 56.3712);
 	--muted-foreground: oklch(0.5471 0.0321 263.2921);
 	--accent: oklch(0.8862 0.0499 18.1343);
